--- a/Ejecutar_scripts.config
+++ b/Ejecutar_scripts.config
@@ -11,7 +11,10 @@ rosa="\e[0;35m\033[1m"
 turquesa="\e[0;36m\033[1m"
 borra_colores="\033[0m\e[0m" #borra colores
 
-echo " Comando ( scripts ), Para ver tus scripts."
+clear
+echo ""
+echo -e " ${azul}Comando ${borra_colores}( scripts )${azul}, Para ver tus scripts.${borra_colores}"
+echo ""
 
 scripts(){
 # Función para mostrar la lista de scripts y obtener la selección del usuario
@@ -19,7 +22,7 @@ function select_script() {
     scripts_list=$(echo ""; ls /home/$(whoami)/scripts/*.sh 2>/dev/null)
     separator=" "
     options="Ayuda\nSalir"
-    selected_script=$(echo -e "$scripts_list\n$separator\n$options" | fzf --height 80% --reverse --header="Selecciona un script:" --no-info) #--preview 'echo "Estos son tus scripts: {}"' --no-info)
+    selected_script=$(echo -e "$scripts_list\n$separator\n$options" | fzf --height 80% --reverse --header="Selecciona un script $(whoami):" --no-info)
 }
 
 # Bucle infinito para seguir preguntando al usuario hasta que haga una selección o presione Ctrl+C para salir
@@ -30,6 +33,10 @@ while true; do
     # Utiliza la estructura case para manejar la selección del usuario
     case "$selected_script" in
         "Salir")
+            clear
+            echo ""
+            echo -e " ${azul}Comando ${borra_colores}( scripts )${azul}, Para ver tus scripts.${borra_colores}"
+            echo ""
             break
             ;;
         "Ayuda")
